fix styling on safari

--- a/css/main.css
+++ b/css/main.css
@@ -194,7 +194,6 @@ img.accent {
   margin-top: 8px;
   vertical-align: middle;
   width: 100%;
-  display: flex;
   filter: opacity(0.7) grayscale(1);
 }
 
